--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,144 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.quotes {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  background: #434344;
+  padding:15px;
 }
 
-.App-link {
-  color: #61dafb;
+.home-header {
+  background: #FFFFFF; 
+  border-radius: 8.57143px;
+  box-shadow: 0px 14px 14px -10px rgb(255 255 255 / 20%);
+  padding: 10px;
+  width: 43%;
+ }
+
+.number-of-quotes {
+ font-family: 'Inter';
+ font-style: normal;
+ font-weight: 700;
+ font-size: 16px;
+ line-height: 19px;
+ display: flex;
+ align-items: center;
+ color: #323232;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.quote-text {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 13px;
+  text-transform: uppercase;
+  color: #6C7899;
+}
+
+.rfq-button-container {
+  padding: 15px;
+}
+
+.rfq-button {
+    box-sizing: border-box;
+    background: #02838B;
+    border: 1px solid #D4D6DE;
+    border-radius: 5px;
+    width: 100%;
+    padding: 12px;
+    color: white;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 140.62%;
+}
+
+.nav-container {
+  padding: 15px;
+  background-color: #F6F6F6;
+  display: flex;
+  justify-content: space-around;
+}
+
+.nav-button {
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 17px;
+line-height: 20px;
+text-transform: capitalize;
+}
+
+.search-button {
+  display: flex;
+  padding: 15px;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+}
+
+.search-input {
+  display: flex;
+  width: 93%;
+  font-size: 17px;
+  padding: 10px;
+}
+.product-details-container {
+  box-shadow: 0px 0px 2px rgb(0 0 0 / 50%);
+  padding: 0px 13px 8px 15px;
+}
+
+.product-details {
+  display: flex;
+}
+
+.details-text {
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 15px;
+line-height: 15px;
+color: #757577;
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+
+.product-date {
+  margin-left: 4%;
+}
+
+.product-enquiry {
+  margin-left: 50%;
+}
+
+.enquiry-container {
+  background: #CCCEFF;
+  border-radius: 10px;
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 15px;
+line-height: 15px;
+display: flex;
+align-items: flex-end;
+color: #1B22CA;
+padding: 3px 10px 3px 10px;
+}
+
+.product-type {
+  font-family: 'Inter';
+  font-style: normal;
+font-weight: 600;
+font-size: 20px;
+line-height: 21px;
+}
+.product-length {
+    margin-top: 2%;
+    background: #D0FCFF;
+    border-radius: 10px;
+    width: fit-content;
+    padding: 3px 20px 3px 20px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 15px;
+    display: flex;
 }
